@@ -8,6 +8,10 @@ version 1.0.1
 - add rudimentary plugin support for TRAMO and X-12-ARIMA
 - fix font encoding for postscript graphs in gtk-1.2 version of
   gretl_x11 (also make postscript graphs in color by default)
+- fix bug in automatic generation of lags for regression (the
+  command was not getting recorded properly in the log file)
+- fix bug in model printout when F() is undefined (line-break
+  was missing)
 
 11/15/02 version 1.0
 - change *nix library name to libgretl-1.0
